--- a/vignettes/Tutorial.Rmd
+++ b/vignettes/Tutorial.Rmd
@@ -15,6 +15,15 @@ knitr::opts_chunk$set(
 )
 ```
 
+To use this package, you need to install it first. You can install the development version from GitHub with the following two commands:
+
+``` r
+install.packages("devtools")
+devtools::install_github("dmorrison01/CSICalc")
+```
+
+Now, here's an example of how to use this package.
+
 ```{r, include = FALSE}
 
 
